--- a/mdbgame/src/components/ImageContainer.css
+++ b/mdbgame/src/components/ImageContainer.css
@@ -1,21 +1,61 @@
 .large-portrait {
-  background-color: var(--foreground);
-  width: 300px;
-  height: 500px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--bubble);
+  width: 280px;
+  height: 450px;
+  padding: 9px;
   border-radius: 18px;
+  box-shadow: 0px 11px 15px rgba(0, 0, 0, 0.2),
+    0px 24px 38px rgba(0, 0, 0, 0.14), 0px 9px 46px rgba(0, 0, 0, 0.12);
 }
 
 .small-portrait {
-  width: 250px;
-  height: 125px;
-  margin: 0 auto;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--bubble);
+  width: 240px;
+  height: 410px;
+  padding: 9px;
+  border-radius: 18px;
+  box-shadow: 0px 11px 15px rgba(0, 0, 0, 0.2),
+    0px 24px 38px rgba(0, 0, 0, 0.14), 0px 9px 46px rgba(0, 0, 0, 0.12);
 }
 
-.portrait-image {
+.left {
+  transform: rotate(-15deg);
+}
+
+.right {
+  transform: rotate(15deg);
+}
+
+.large-portrait-image {
+  width: 280px;
+  height: 405px;
+  border-radius: 12px;
+  box-shadow: 0px 0px 12px -3px rgba(0, 0, 0, 0.75);
+}
+
+.small-portrait-image {
+  width: 240px;
+  height: 350px;
+  border-radius: 12px;
+  box-shadow: 0px 0px 12px -3px rgba(0, 0, 0, 0.75);
 }
 
 .portrait-text {
-  font-size: 2.4em;
+  text-align: center;
+  color: white;
+  margin: 0.5em;
+  font-size: 24px;
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2),
+    0px 24px 38px rgba(0, 0, 0, 0.14);
+}
+
+.small-text {
+  margin: 0.7em;
+  font-size: 20px;
 }
