--- a/mdbgame/src/components/ImageContainer.css
+++ b/mdbgame/src/components/ImageContainer.css
@@ -7,8 +7,6 @@
   height: 450px;
   padding: 9px;
   border-radius: 18px;
-  box-shadow: 0px 11px 15px rgba(0, 0, 0, 0.2),
-    0px 24px 38px rgba(0, 0, 0, 0.14), 0px 9px 46px rgba(0, 0, 0, 0.12);
 }
 
 .small-portrait {
@@ -17,11 +15,18 @@
   align-items: center;
   background-color: var(--bubble);
   width: 240px;
-  height: 410px;
+  height: 395px;
   padding: 9px;
   border-radius: 18px;
+}
+
+.large-shadow {
   box-shadow: 0px 11px 15px rgba(0, 0, 0, 0.2),
     0px 24px 38px rgba(0, 0, 0, 0.14), 0px 9px 46px rgba(0, 0, 0, 0.12);
+}
+
+.small-shadow {
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .left {
@@ -49,13 +54,29 @@
 .portrait-text {
   text-align: center;
   color: white;
-  margin: 0.5em;
-  font-size: 24px;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2),
     0px 24px 38px rgba(0, 0, 0, 0.14);
 }
 
-.small-text {
-  margin: 0.7em;
-  font-size: 20px;
+.super-small-text-image {
+  margin: 1.1em;
+  font-size: 14px;
+}
+
+.small-text-image {
+  margin-top: 0.8em;
+  font-size: 16px;
+}
+.medium-text-image {
+  margin-top: 0.6em;
+  font-size: 19px;
+}
+.large-text-image {
+  margin-top: 0.38em;
+  font-size: 24px;
+}
+
+.empty-image {
+  display: flex;
+  background-color: var(--image-background);
 }
