--- a/mdbgame/src/components/Playground.css
+++ b/mdbgame/src/components/Playground.css
@@ -1,6 +1,17 @@
 .playground-container {
   background-color: var(--foreground);
-  margin-top: 30px;
-  margin-left: 300px;
-  padding: 30px;
+  margin: 30px 30px 25px 320px;
+
+  padding: 40px;
+  width: 100%;
+  border-radius: 18px;
+}
+
+.movie-list-title {
+  margin-left: 5px;
+  margin-top: 1em;
+}
+
+.playground-image {
+  box-shadow: 0px 1px 8px -4px rgba(0, 0, 0, 0.75);
 }
