--- a/mdbgame/src/components/ImageContainer.css
+++ b/mdbgame/src/components/ImageContainer.css
@@ -1,23 +1,20 @@
-.large-portrait {
+.portrait {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--bubble);
-  width: 280px;
-  height: 450px;
-  padding: 9px;
+  padding: 9px 9px 0px 9px;
   border-radius: 18px;
 }
 
+.large-portrait {
+  width: 280px;
+  height: 450px;
+}
+
 .small-portrait {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--bubble);
-  width: 240px;
-  height: 395px;
-  padding: 9px;
-  border-radius: 18px;
+  width: 220px;
+  height: 370px;
 }
 
 .large-shadow {
@@ -45,34 +42,45 @@
 }
 
 .small-portrait-image {
-  width: 240px;
-  height: 350px;
+  width: 220px;
+  height: 325px;
   border-radius: 12px;
   box-shadow: 0px 0px 12px -3px rgba(0, 0, 0, 0.75);
 }
 
-.portrait-text {
+.small-text-name {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
   text-align: center;
   color: white;
   text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2),
     0px 24px 38px rgba(0, 0, 0, 0.14);
+  height: 35px;
+}
+
+.large-text-name {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  text-align: center;
+  color: white;
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2),
+    0px 24px 38px rgba(0, 0, 0, 0.14);
+  height: 35px;
 }
 
 .super-small-text-image {
-  margin: 1.1em;
   font-size: 14px;
 }
 
 .small-text-image {
-  margin-top: 0.8em;
   font-size: 16px;
 }
 .medium-text-image {
-  margin-top: 0.6em;
   font-size: 19px;
 }
 .large-text-image {
-  margin-top: 0.38em;
   font-size: 24px;
 }
 
