--- a/mdbgame/src/components/Playground.css
+++ b/mdbgame/src/components/Playground.css
@@ -1,9 +1,8 @@
 .playground-container {
   background-color: var(--foreground);
-  margin: 30px 30px 25px 320px;
 
-  padding: 40px;
-  width: 100%;
+  padding: 40px 42px;
+  /* width: 70vw;  */
   border-radius: 18px;
 }
 
@@ -14,4 +13,9 @@
 
 .playground-image {
   box-shadow: 0px 1px 8px -4px rgba(0, 0, 0, 0.75);
+}
+
+.playground-background {
+  margin: 30px 30px 25px 320px;
+  width: 100%;
 }
