--- a/mdbgame/src/components/Playground.css
+++ b/mdbgame/src/components/Playground.css
@@ -11,6 +11,10 @@
   margin-top: 1em;
 }
 
+.actor-list {
+  flex-wrap: wrap;
+}
+
 .playground-image {
   box-shadow: 0px 1px 8px -4px rgba(0, 0, 0, 0.75);
 }
