--- a/mdbgame/src/components/Sidebar.css
+++ b/mdbgame/src/components/Sidebar.css
@@ -8,3 +8,13 @@
   padding-bottom: 50px;
   justify-content: space-between;
 }
+
+.sidebar-text {
+  font-size: 2em;
+  font-weight: bold;
+  color: var(--blue);
+  margin-top: 0;
+  margin-bottom: 0;
+  text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2),
+    0px 24px 38px rgba(0, 0, 0, 0.14);
+}
