Add: Give up botton and svg for back button

--- a/mdbgame/src/Pages/GameInit.css
+++ b/mdbgame/src/Pages/GameInit.css
@@ -17,6 +17,12 @@ img {
   gap: 5em;
 }
 
+.arrow-back {
+  padding: 6px 1px 6px 0px;
+}
+.svg-color:hover path {
+  fill: var(--background);
+}
 .arrows {
   width: 400px;
   height: 129px;
