--- a/mdbgame/src/components/Sidebar.css
+++ b/mdbgame/src/components/Sidebar.css
@@ -25,7 +25,7 @@
 
 .give-up {
   width: fit-content;
-  background-color: var(--blue);
+  background-color: var(--transparent-blue);
   border-radius: 8px;
   text-align: center;
 }
