Add: Game finished for presentation

--- a/mdbgame/src/Pages/HowTo.css
+++ b/mdbgame/src/Pages/HowTo.css
@@ -13,3 +13,10 @@
 .centered {
   text-align: center;
 }
+
+.howto-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
