--- a/mdbgame/src/index.css
+++ b/mdbgame/src/index.css
@@ -7,6 +7,9 @@
   --bubble: #535353;
   --image-background: #717171;
   --grey-text: #bebebe;
+  --yellow: #ebda23;
+  --red: #ff0000;
+  --green: #00ff00;
 }
 
 body {
