Ready for legacy project

--- a/mdbgame/src/Pages/HowTo.css
+++ b/mdbgame/src/Pages/HowTo.css
@@ -2,7 +2,7 @@
   position: relative;
   background-color: var(--foreground);
   border-radius: 18px;
-  padding: 3rem;
+  padding: 3rem 4.7rem 3rem 3rem;
   margin: 0 5vw 15px 5vw;
 }
 
