--- a/mdbgame/src/Pages/Menu.css
+++ b/mdbgame/src/Pages/Menu.css
@@ -15,6 +15,7 @@
   height: 35px;
   border-radius: 100px;
   border: 5px solid var(--background);
+  background-color: var(--background);
 }
 
 .profile-div {
@@ -23,12 +24,21 @@
   align-items: center;
   justify-content: center;
   padding-right: 17px;
-  gap: 10px;
-  color: var(--blue);
+  gap: 15px;
+  color: var(--background);
   font-weight: bold;
   letter-spacing: 0.085em;
 }
 
-.profile-div:hover {
+.profile-button {
+  border: 8px solid var(--blue);
+  border-radius: 18px;
+  font-size: 1.9em;
+  letter-spacing: 0.085em;
+  font-family: 'Roboto', sans-serif;
   color: var(--background);
+  font-weight: 900;
+  background-color: var(--blue);
+  cursor: pointer;
+  transition: color 0.1s ease-in-out;
 }
